@@ -2,7 +2,7 @@ language: scala
 sudo: false
 scala:
 - 2.11.12
-- 2.12.4
+- 2.12.7
 - 2.13.0-M5
 jdk: oraclejdk8
 script:
