@@ -4,6 +4,6 @@
 ScalaSTM is a lightweight software transactional memory for Scala,
 inspired by the STMs in Haskell and Clojure.
 
-The current release is 0.8.  There is not currently a published
+The current release is 0.9.  There is not currently a published
 snapshot release.  For download info and documentation see
 http://scala-stm.org
