@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <properties>
-    <scala.version>2.12.0</scala.version>
+    <scala.version>2.12.7</scala.version>
     <scala.major.version>2.12</scala.major.version>
-    <scala.stm.version>0.8-SNAPSHOT</scala.stm.version>
+    <scala.stm.version>0.9</scala.stm.version>
   </properties>
 
   <modelVersion>4.0.0</modelVersion>
