@@ -1,7 +1,7 @@
 import scala.concurrent.stm._
 
 object HelloWorld {
-  def main(args: Array[String]) {
+  def main(args: Array[String]): Unit = {
     val x = Ref("hello world!")
     println(x.single())
   }
