@@ -1,1 +1,1 @@
-addSbtPlugin("com.typesafe" % "sbt-mima-plugin" % "0.1.18")  // test binary compatibility between minor versions
+addSbtPlugin("com.typesafe" % "sbt-mima-plugin" % "0.3.0")  // test binary compatibility between minor versions
